--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,8 @@ dependencies:
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.1
   google_fonts: ^6.3.2
+  intl_phone_field: ^3.2.0
+  pin_code_fields: ^8.0.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
