--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,18 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   adaptive_screen_utils: ^2.4.0
+  carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
+  dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.1
   google_fonts: ^6.3.2
+  google_nav_bar: ^5.0.6
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
+  smooth_page_indicator: ^1.2.1
 
 dev_dependencies:
   flutter_lints: ^5.0.0
