--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   dots_indicator: ^3.0.0
+  easy_stepper: ^0.9.1
   flutter:
     sdk: flutter
   flutter_screenutil: ^5.9.3
@@ -41,6 +42,7 @@ dependencies:
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.2.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
