--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.2.1
   intl: ^0.19.0
+  timeline_tile: ^2.0.0
 
 dev_dependencies:
   flutter_lints: ^5.0.0
