--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   adaptive_screen_utils: ^2.4.0
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
+  device_preview: ^1.3.1
   dots_indicator: ^3.0.0
   easy_stepper: ^0.9.1
   flutter:
@@ -39,10 +40,11 @@ dependencies:
   flutter_svg: ^2.2.1
   google_fonts: ^6.3.2
   google_nav_bar: ^5.0.6
+  intl: 0.20.2
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
+  responsive_framework: ^1.5.1
   smooth_page_indicator: ^1.2.1
-  intl: ^0.19.0
   timeline_tile: ^2.0.0
 
 dev_dependencies:
