--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: fruits_app
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -31,7 +31,6 @@ dependencies:
   adaptive_screen_utils: ^2.4.0
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
-  device_preview: ^1.3.1
   dots_indicator: ^3.0.0
   easy_stepper: ^0.9.1
   flutter:
@@ -43,7 +42,6 @@ dependencies:
   intl: 0.20.2
   intl_phone_field: ^3.2.0
   pin_code_fields: ^8.0.1
-  responsive_framework: ^1.5.1
   smooth_page_indicator: ^1.2.1
   timeline_tile: ^2.0.0
 
@@ -56,7 +54,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
