--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   adaptive_screen_utils: ^2.4.0
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
+  device_preview: ^1.3.1
   dots_indicator: ^3.0.0
   easy_stepper: ^0.9.1
   flutter:
