--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,22 +29,32 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   adaptive_screen_utils: ^2.4.0
+  awesome_notifications: ^0.10.1
   carousel_slider: ^5.0.0
   cupertino_icons: ^1.0.8
   device_preview: ^1.3.1
+  dio: ^5.9.1
   dots_indicator: ^3.0.0
   easy_stepper: ^0.9.1
+  firebase_core: ^3.10.1
+  firebase_messaging: ^15.2.1
   flutter:
     sdk: flutter
+  flutter_bloc: ^9.0.0
   flutter_screenutil: ^5.9.3
   flutter_svg: ^2.2.1
   google_fonts: ^6.3.2
   google_nav_bar: ^5.0.6
   intl: 0.20.2
   intl_phone_field: ^3.2.0
+  onesignal_flutter: ^5.3.5
+  permission_handler: ^11.3.1
   pin_code_fields: ^8.0.1
   smooth_page_indicator: ^1.2.1
   timeline_tile: ^2.0.0
+  get_it: ^8.0.3
+  dartz: ^0.10.1
+  shared_preferences: ^2.3.4
 
 dev_dependencies:
   flutter_lints: ^5.0.0
