--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   get_it: ^8.0.3
   dartz: ^0.10.1
   shared_preferences: ^2.3.4
+  equatable: ^2.0.8
 
 dev_dependencies:
   flutter_lints: ^5.0.0
